ingress/ingress.txt.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
  name: ingress-$pacman
  namespace: $pacman
spec:
  ingressClassName: nginx
  rules:
  - host: ingress-$pacman.k8s.dev.austrianopensciencecloud.org
    http:
      paths:
      - backend:
          service:
            name: pacman
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ingress-$pacman.k8s.dev.austrianopensciencecloud.org
    secretName: $pacman-ingress-tls
