ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
  name: ingress-u-r6hsy45r2f
  namespace: u-r6hsy45r2f
spec:
  ingressClassName: nginx
  rules:
  - host: ingress-u-r6hsy45r2f.k8s.dev.austrianopensciencecloud.org
    http:
      paths:
      - backend:
          service:
            name: pacman
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ingress-u-r6hsy45r2f.k8s.dev.austrianopensciencecloud.org
    secretName: u-r6hsy45r2f-ingress-tls
